--- a/package.json
+++ b/package.json
@@ -1,41 +1,26 @@
 {
   "name": "react-app",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
-  "homepage": "https://bryok-droid.github.io/React-App",
-  "engines": {
-    "node": ">=22.0.0",
-    "npm": ">=10.0.0"
-  },
+  "private": true,
   "scripts": {
-    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "predeploy": "rm -rf dist && npm run build",
-    "deploy": "gh-pages -d dist --dotfiles -b gh-pages",
-    "clean-deploy": "npm run predeploy && npm run deploy"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "framer-motion": "^12.6.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.24.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^5.0.2",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.24.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "gh-pages": "^7.0.0",
-    "globals": "^15.15.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.2.8"
-  }
+    "@tailwindcss/postcss": "^0.1.0",
+    "autoprefixer": "^10.4.17",
+    "gh-pages": "^6.0.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.4.0"
+  },
+  "homepage": "https://BryOk-droid.github.io/React-App/"
 }
