--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^6.21.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^0.1.0",
+    "@tailwindcss/postcss": "^4.1.3",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.17",
     "gh-pages": "^6.0.0",
     "postcss": "^8.4.35",
